[package]
license = "Apache-2.0"
name = "cosmos"
version = "2.0.2"
edition = "2024"
description = "Accretion disk to collapsed singularity lifecycle"
publish = false
autobins = false

[lib]
name = "screensaver_cosmos"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
idle-api = { path = "idle/idle-api" }
libc = "0.2"

[build-dependencies]
embed-resource = "2"

[package.metadata.deb]
name = "idle-saver-cosmos"
provides = "trance-plugin-cosmos"
replaces = "trance-plugin-cosmos"
conflicts = "trance-plugin-cosmos (<< 2.0.0)"
maintainer = "idlescreen <jerydleuck@gmail.com>"
extended-description = "Accretion disk to collapsed singularity lifecycle. Official IdleScreen (Trance) screensaver plugin."
depends = "libc6"
section = "utils"
priority = "optional"
assets = [
    ["target/release/libscreensaver_cosmos.so", "usr/libexec/idle/screensavers/libscreensaver_cosmos.so", "644"],
    ["assets/idlescreen-cosmos.png", "usr/share/pixmaps/idlescreen-cosmos.png", "644"]
]

[package.metadata.generate-rpm]
name = "idle-saver-cosmos"
release = "1"
arch = "x86_64"
summary = "Accretion disk to collapsed singularity lifecycle"
description = "Accretion disk to collapsed singularity lifecycle"
license = "Apache-2.0"
assets = [
    { source = "target/release/libscreensaver_cosmos.so", dest = "/usr/libexec/idle/screensavers/libscreensaver_cosmos.so", mode = "644", user = "root", group = "root" },
    { source = "assets/idlescreen-cosmos.png", dest = "/usr/share/pixmaps/idlescreen-cosmos.png", mode = "644", user = "root", group = "root" }
]

[package.metadata.generate-rpm.requires]
idle = "*"

[package.metadata.generate-rpm.provides]
trance-plugin-cosmos = "*"

[package.metadata.generate-rpm.obsoletes]
trance-plugin-cosmos = "*"
